--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^2.2.0",
     "reload": "^2.2.1",
     "style-loader": "^0.18.2",
+    "url": "^0.11.0",
     "url-loader": "^1.0.1",
     "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.12.0",
