--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less-loader": "^4.0.5",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "prismjs": "^1.15.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
