--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.5",
+    "easy-copydir": "^1.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
     "file-loader": "^1.1.11",
