--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reload": "^2.2.1",
+    "socket.io": "^2.1.1",
     "style-loader": "^0.18.2",
     "url": "^0.11.0",
     "url-loader": "^1.0.1",
