--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "启动程序",
-            "program": "${workspaceFolder}/nodejs/http.js"
+            "name": "博客启动",
+            "program": "${workspaceFolder}/server/server.js"
         }
     ]
 }
